--- a/WebContent/css/subbuteo.css
+++ b/WebContent/css/subbuteo.css
@@ -34,21 +34,22 @@
   position:relative;
   display:block;
   width: 100%;
-  height:30px;
+  height:5%;
   text-align: center;
   background-color: yellow;
 }
 
-#avatar
-{
-
+#canvas {
   position:relative;
   display:block;
-  width: 32px;
-  margin-left: auto;
-  margin-right: auto;
-  bottom:-25%;
-  
-  
+  width:100%;
+  height: 95%;
+}
 
+#canvas{
+
+  background: url(../assets/grass.jpg);
+  
+  background-size: 240px 240px;
+  background-repeat: repeat;
 }
