--- a/css/controller.css
+++ b/css/controller.css
@@ -48,7 +48,7 @@
 
 #canvas{
 
-  background: url(../assets/grass.jpg);
+  background: url(../hft-assets/grass.jpg);
   
   background-size: 240px 240px;
   background-repeat: repeat;
