--- a/css/controller.css
+++ b/css/controller.css
@@ -42,9 +42,9 @@
 #canvas {
   position:relative;
   display:block;
-  width:100%;
+  width:50%;
   margin: 0 auto 0 auto;
-  height: 100%;
+  height: 50%;
 }
 
 #canvas{
@@ -53,4 +53,12 @@
   
   background-size: 240px 240px;
   background-repeat: repeat;
+}
+
+#mydiv
+{
+width: 100%;
+height:95%;
+background-image: url(../hft-assets/grass.jpg);
+
 }
