--- a/css/controller.css
+++ b/css/controller.css
@@ -55,10 +55,7 @@
   background-repeat: repeat;
 }
 
-#mydiv
-{
-width: 100%;
-height:95%;
+body{
 background-image: url(../hft-assets/grass.jpg);
 
 }
