--- a/Assets/WebPlayerTemplates/HappyFunTimes/css/controller.css
+++ b/Assets/WebPlayerTemplates/HappyFunTimes/css/controller.css
@@ -42,8 +42,19 @@
 
 
 body{
-background-image: url(../hft-assets/grass.jpg);
-text-align: center;
+  background-image: url(../hft-assets/grass.jpg);
+  background-size: cover;
+  text-align: center;
+}
+
+#inputarea
+{
+    z-index: 10;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
 }
 
 
